--- a/file2.html
+++ b/file2.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Stating obvioius facts</h1>
     <p>Me spoiling the code</p>
+    <p>Doing some more trash in branch </p>
 </body>
 </html>
